@@ -1,3 +1,8 @@
+2011-02-11  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* geotiff_proj4.c, geo_normalize.c: fix a few warnings for type casts, 
+	and uninitialized variables.
+
 2011-01-28  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* cpl_serv.h: Adjust EQUALN to avoid warnings on modern MSVC compiles.
